Update UI tests